# automata_lab1

./: .gitignore  CMakeLists.txt  lab1_zadanie.txt  main.cpp
bench/: Bench.cpp  Bench.h
flex/: Flex.cpp  Flex.h  flex.l  lex.yy.cc
regex/: Regex.h
smc/: Analyz.h  AppClass.cpp  AppClass.h  Sm.sm  Sm_sm.cpp  Sm_sm.h  statemap.h
strgen/: main.cpp  strgen.cpp  strgen.h
